--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
   "name": "@light-tower-team/monads",
+  "version": "0.0.1-alpha2",
+  "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "typings": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "default": "./dist/index.mjs",
-      "require": "./dist/index.mjs"
-    },
     "./result": {
-      "types": "./dist/result/index.d.ts",
-      "import": "./dist/result/index.mjs",
-      "default": "./dist/result/index.mjs",
-      "require": "./dist/result/index.mjs"
-    },
-    "./package.json": "./package.json"
+      "types": "./dist/types/result/index.d.ts",
+      "import": "./dist/result/index.js"
+    }
+  },
+  "scripts": {
+    "auto-fix": "lefthook run auto-fix",
+    "build": "rm -rf ./dist && tsc -p ./tsconfig.build.json && node ./scripts/build.js && tsc -p ./tsconfig.typegen.json",
+    "ts_check": "tsc --noEmit",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
+    "fmt": "prettier . --write",
+    "fmt:check": "prettier . --check",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:cov": "vitest --coverage",
+    "test:run": "vitest run",
+    "test:run:cov": "vitest run --coverage",
+    "test:debug": "vitest --inspect-brk --pool threads --poolOptions.threads.singleThread"
   },
   "sideEffects": false,
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0",
+    "pnpm": ">=8"
   },
-  "version": "0.0.1-alpha2",
-  "license": "ISC",
+  "license": "MIT",
   "author": "michailshcherbakov@gmail.com",
   "bugs": {
     "url": "https://github.com/light-tower-team/monads/issues"
@@ -37,37 +41,25 @@
     "type": "git",
     "url": "git+https://github.com/light-tower-team/monads.git"
   },
-  "scripts": {
-    "dev": "vite",
-    "auto-fix": "yarn lefthook run auto-fix",
-    "test": "vitest",
-    "test:debug": "vitest --inspect-brk --single-thread",
-    "ts_check": "tsc --noEmit",
-    "build": "yarn ts_check && vite build && tsc --declaration --emitDeclarationOnly",
-    "preview": "vite preview",
-    "lint": "eslint . --fix  --report-unused-disable-directives --max-warnings 0",
-    "lint:check": "eslint .",
-    "fmt": "prettier . --write",
-    "fmt:check": "prettier . --check"
-  },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@types/node": "^20.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@faker-js/faker": "^8.4.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "fast-glob": "^3.3.1",
-    "lefthook": "^1.5.2",
-    "prettier": "^3.0.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4",
-    "vite-tsconfig-paths": "^4.2.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@vitest/coverage-istanbul": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
+    "esbuild": "^0.20.2",
+    "lefthook": "^1.6.7",
+    "prettier": "^3.2.5",
+    "semantic-release": "^23.0.5",
+    "typescript": "^5.4.2",
     "vitest": "^0.34.6"
   }
 }
