--- a/package.json
+++ b/package.json
@@ -43,23 +43,45 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "@vitest/coverage-istanbul": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
+    "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@vitest/coverage-istanbul": "^1.4.0",
-    "@vitest/ui": "^1.4.0",
-    "esbuild": "^0.20.2",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "lefthook": "^1.6.7",
     "prettier": "^3.2.5",
     "semantic-release": "^23.0.5",
     "typescript": "^5.4.2",
-    "vitest": "^0.34.6"
+    "vitest": "^1.4.0"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "verifyConditions": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ],
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ],
+    "publish": [
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ],
+    "success": false,
+    "fail": false
   }
 }
