--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@light-tower-team/monads",
   "version": "1.0.2",
+  "description": "This package contains useful monads to be used in all javascript projects across Light Tower.",
   "type": "module",
   "files": [
     "dist"
@@ -15,10 +16,10 @@
     "auto-fix": "lefthook run auto-fix",
     "build": "rm -rf ./dist && tsc -p ./tsconfig.build.json && node ./scripts/build.js && tsc -p ./tsconfig.typegen.json",
     "ts_check": "tsc --noEmit",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint .",
-    "fmt": "prettier . --write",
-    "fmt:check": "prettier . --check",
+    "lint": "eslint ./src --fix",
+    "lint:check": "eslint ./src",
+    "fmt": "prettier ./src --write",
+    "fmt:check": "prettier ./src --check",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:cov": "vitest --coverage",
@@ -43,19 +44,13 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@light-tower-team/eslint-plugin": "^1.0.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
     "@vitest/coverage-istanbul": "^1.4.0",
     "@vitest/ui": "^1.4.0",
     "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
     "lefthook": "^1.6.7",
     "prettier": "^3.2.5",
     "semantic-release": "^23.0.5",
